Fix: default dark mode styling

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,13 +2,13 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
-@media (prefers-color-scheme: dark) {
+/* Uncomment this line to implement default dark mode colors if system is set to dark mode */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
